@@ -18,8 +18,6 @@ package Apache2::Reload;
 use strict;
 use warnings FATAL => 'all';
 
-use mod_perl2;
-
 our $VERSION = '0.12';
 
 use Apache2::Const -compile => qw(OK);
